--- a/搜索/搜索技巧.md
+++ b/搜索/搜索技巧.md
@@ -1,4 +1,4 @@
-1. 多用google搜索，多搜英文，但实在想看中文结果，可以在url上加`lr=lang_zh-CN`，即`https://www.google.com/?lr=lang_zh-CN`
+1. 多用google搜索，多搜英文，但实在想看中文结果，可以加**的**或者在url上加`lr=lang_zh-CN`，即`https://www.google.com/?lr=lang_zh-CN`
 
 2. github是个宝库，可以直接在github搜索感兴趣的东西。  
 但有时github搜索效果不是很好，可以用google搜github的东西，搜索方式为`site:github.com  xxx`
